src/test/ui/error-codes/E0263.stderr
error[E0263]: lifetime name `'a` declared twice in the same scope
  --> $DIR/E0263.rs:11:16
   |
LL | fn foo<'a, 'b, 'a>(x: &'a str, y: &'b str) {
   |        --      ^^ declared twice
   |        |
   |        previous declaration here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0263"
